...
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_profile"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
...
            android:layout_height="wrap_content"
            android:text="Sorry, no history yet.."
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
...
